# fast-tagsoup

./: LICENSE  README.md  fast-tagsoup.cabal
Text/HTML/TagSoup/: Fast.hs  GenHtmlEntities.hs  HtmlEntities.hs  Test.hs
