cabal-version:  2.4
name:           fast-tagsoup
version:        1.0.14
author:         Vladimir Shabanov <dev@vshabanov.com>
maintainer:     Vladimir Shabanov <dev@vshabanov.com>
homepage:       https://github.com/vshabanov/fast-tagsoup
license:        BSD-3-Clause
category:       XML
license-file:   LICENSE
build-type:     Simple
synopsis:       Fast parsing and extracting information from (possibly malformed) HTML/XML documents
description:
    .
    Fast TagSoup parser. Speeds of 20-200MB/sec were observed.
    .
    Works only with strict bytestrings.
    .
    This library is intended to be used in conjunction with the original @tagsoup@ package:
    .
    > import Text.HTML.TagSoup hiding (parseTags, renderTags)
    > import Text.HTML.TagSoup.Fast
    .
    Besides speed @fast-tagsoup@ correctly handles HTML @\<script\>@ and @\<style\>@ tags, converts tags to lower case and can decode non UTF-8 XML for you.
    .
    This parser is used in production in BazQux Reader feeds and comments crawler.

source-repository head
    type:     git
    location: https://github.com/vshabanov/fast-tagsoup

library
    default-language: Haskell2010
    build-depends:
        base == 4.*, bytestring, text, text-icu, tagsoup >= 0.13.10, containers

    exposed-modules:
        Text.HTML.TagSoup.Fast

    ghc-options: -O2
